@@ -1893,6 +1893,7 @@ cdef class _Validator:
         def __get__(self):
             return self._error_log.copy()
 
+include "dtd.pxi"       # DTD
 include "relaxng.pxi"   # RelaxNG
 include "xmlschema.pxi" # XMLSchema
 
